--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "spatie/laravel-permission": "^5.8",
         "srmklive/paypal": "^3.0",
         "stripe/stripe-php": "^7.57",
-        "twilio/sdk": "^6.10"
+        "twilio/sdk": "^6.10",
+        "razorpay/razorpay": "^2.9"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
